--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# variables de entorno
+REACT_APP_BASE_URL = https://jsonplaceholder.typicode.com
