--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# variables de entorno
-REACT_APP_BASE_URL = https://jsonplaceholder.typicode.com
+.env
